FC-40 Create removing flashcard functionality (#18)
* feat: Add removing single flashcard functionality

* feat: Add swagger for deleting flashcard endpoint
