# src/swagger/flashcards.yaml
@@ -44,6 +44,37 @@ paths:
         500:
           description: 'Server Error'
 
+  /flashcards/delete/list/{listID}/flashcard/{flashcardID}:
+    # [DELETE] Remove flashcard from list
+    delete:
+      tags:
+        - flashcards
+      summary: Remove flashcard from list
+      parameters:
+        - in: query
+          name: listID
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: flashcardID
+          schema:
+            type: string
+          required: true
+      responses:
+        204:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'Not Found'
+        500:
+          description: 'Server Error'
+
   /flashcards/create:
     # [POST] Create flashcard
     post:
